# 2026_molgri

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
molgri/: constants.py  full_network.py  grid_geometry.py  plotting.py  polytope.py  rotgrid.py  transgrid.py  translation_grid.py  translation_network.py  utils.py
molgri/network/: full_network.py  polytope.py  rotation_network.py  translation_network.py  utils.py
test/: polytope.py  test_polytope.py  test_transgrid.py  test_utils.py  transgrid.py
workflows/: Snakemake  grids  pseudotrajectories
workflows/config/: network_config.yaml  pseudotrajectory_config.yaml  spherical_network_config.yaml
workflows/helpers/: PATHS.py  io.py
workflows/rules/: grids.smk  pseudotrajectories.smk  timing.smk
